Active workers should not be reset in AbstractWorkGang initialize()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b126

      The field _active_workers in AbstractWorkGang is set correctly in the AbstractWorkGang constructor and should not be reset in the initialize() method (where it is currently set incorrectly for concurrent workers.

            Assignee:
            Jon Masamitsu (Inactive)
            Reporter:
            Jon Masamitsu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: