8157373: Active workers should not be reset in AbstractWorkGang initialize()

Reviewed-by: kbarrett, tschatzl, jwilhelm